--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "django>=5.2.6",
+    "pillow>=11.3.0",
+    "qrcode>=8.2",
 ]
